--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <hr>
             <div id="btnContainer">
                 <div id="button" onclick="pressed()">
-                    <img src="images/poop-emoji-kicsi.png" alt="">
+                    <img class="noselect" src="images/poop-emoji-kicsi.png" alt="">
                 </div>
             </div>
         </div>
@@ -84,12 +84,12 @@
                 </div>
                 <div class="record">
                     <div class="iconContainer">
-                        <img src="images/rabbit.png" alt="Rabbit">
+                        <img src="images/dog.png" alt="Rabbit">
                     </div>
-                    <p id="rabbitCount">0</p>
-                    <div id="rabbitElements" class="elements"></div>
+                    <p id="dogCount">0</p>
+                    <div id="dogElements" class="elements"></div>
                     <div class="btnContainer">
-                        <button class="button" id="rabbitButton" onclick="rabbitPressed()" disabled>
+                        <button class="button" id="dogButton" onclick="dogPressed()" disabled>
                             20
                             <img class="coinIcon" src="images/coin.png" alt="">
                         </button>
