--- a/index.html
+++ b/index.html
@@ -66,6 +66,21 @@
                             </button>
                         </div>
                     </div>
+                    <hr>
+                    <div class="boostRecord">
+                        <div class="boostImgContainer">
+                            <img src="images/dog.png" alt="">
+                        </div>
+                        <p class="boostDescription">
+                            Increase the score gained by dogs. (X2)
+                        </p>
+                        <div class="boostBtnContainer">
+                            <button class="button" id="boostDogButton" onclick="boostDogPressed()" disabled>
+                                50000
+                                <img class="coinIcon" src="images/coin.png" alt="">
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div id="recordContainer">
@@ -90,7 +105,7 @@
                     <div id="dogElements" class="elements"></div>
                     <div class="btnContainer">
                         <button class="button" id="dogButton" onclick="dogPressed()" disabled>
-                            20
+                            100
                             <img class="coinIcon" src="images/coin.png" alt="">
                         </button>
                     </div>
