Add gain per second

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
             </div>
             <hr>
             <div id="scoreContainer">
-                <h1 id="score">0</h1>
+                <h1 id="score">0</h1> 
             </div>
+            <p id="gainPerSecond">(0 poop per second)</p>
             <hr>
             <div id="btnContainer">
                 <div id="button" onclick="pressed()">
